--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -85,10 +85,7 @@ repos:
         language: system
         pass_filenames: false
         always_run: true
-    # Make sure Sphinx can build the documentation while explicitly omitting 
-    # notebooks from the docs, so users don't have to wait through the execution 
-    # of each notebook or each commit. By default, these will be checked in the 
-    # GitHub workflows.
+    # Make sure Sphinx can build the documentation without issues.
   - repo: local
     hooks:
       - id: sphinx-build
@@ -99,15 +96,12 @@ repos:
         exclude_types: [file, symlink]
         args:
           [
-            "-M", # Run sphinx in make mode, so we can use -D flag later
-                  # Note: -M requires next 3 args to be builder, source, output
-            "html", # Specify builder
-            "./docs", # Source directory of documents
-            "./_readthedocs", # Output directory for rendered documents
             "-T", # Show full trace back on exception
-            "-E", # Don't use saved env; always read all files
+            "-E", # Don't use saved env. always read all files.
+            "-b", # Flag to select which builder to use
+            "html", # Use the HTML builder
             "-d", # Flag for cached environment and doctrees
-            "./docs/_build/doctrees", # Directory
-            "-D", # Flag to override settings in conf.py
-            "exclude_patterns=notebooks/*", # Exclude our notebooks from pre-commit
+            "./docs/_build/doctrees", # directory
+            "./docs", # Source directory of documents
+            "./_readthedocs", # Output directory for rendered documents.
           ]
